--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "nodebb-plugin-image-sizer",
-  "version": "0.0.2",
+  "name": "@ariastel/nodebb-plugin-image-sizer",
+  "version": "1.0.0",
   "description": "This plugin allows you to resize images in NodeBB",
   "main": "library.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Kern--/nodebb-plugin-image-sizer"
-  },
+  "repository": "git://github.com/ariastel/nodebb-plugin-image-sizer.git",
   "keywords": [
     "nodebb",
     "plugin",
     "image",
     "resize"
   ],
-  "author":  "Kern--",
+  "author": "Kern--",
+  "contributors": [
+    "Ariastel Team <ariastel@iamantosik.me> (https://github.com/ariastel)"
+  ],
   "license": "BSD-2-Clause",
   "bugs": {
-    "url": "https://github.com/Kern--/nodebb-plugin-image-sizer/issues"
+    "url": "https://github.com/ariastel/nodebb-plugin-image-sizer/issues"
   },
-  "readmeFilename": "README.md"
+  "readmeFilename": "README.md",
+  "dependencies": {},
+  "nbbpm": {
+    "compatibility": "^1.16.x"
+  },
+  "homepage": "https://github.com/ariastel/nodebb-plugin-image-sizer",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  }
 }
